cargo-features = ["edition"]

[package]
edition = "2018"
name = "nds"
version = "0.1.0"
authors = ["Maid Dog <maiddogsrl@gmail.com>"]

[dependencies]
byteorder = "1.2"
failure = "0.1"
lazy_static = "1.1"
memmap = "0.6"
rayon = "1.0"

[dependencies.num]
version = "0.2"
default-features = false

[dev-dependencies]
criterion = "0.2"
md5 = "0.3"

[[bench]]
name = "extract"
harness = false

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1