[package]
edition = "2018"
name = "nds"
version = "0.1.1"
authors = ["Maid Dog <maiddogsrl@gmail.com>"]
description = "Library for handling Nintendo DS ROM files."
documentation = "https://docs.rs/nds"
repository = "https://github.com/Roughsketch/nds"
readme = "README.md"
keywords = ["utility", "nds", "rom", "extract", "build"]
categories = ["filesystem"]
license = "MIT"
exclude = ["tests/*", "benches/*"]

[workspace]
members = [
    "narc",
    "nitro_fs",
]

[dependencies]
byteorder = "1.3"
lazy_static = "1.2"
memmap = "0.7"
rayon = "1.0"

# Error handling
thiserror = "1.0.26"
anyhow = "1.0"

num = {version = "0.2", default-features = false}
nitro_fs = {path = "nitro_fs", version = "0.1.1" }

[dev-dependencies]
criterion = "0.2"
md5 = "0.6"

[[bench]]
name = "extract"
harness = false
path = "benches"

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1
