cargo-features = ["edition"]

[package]
edition = "2018"
name = "narc"
version = "0.1.0"
authors = ["Maid Dog <maiddogsrl@gmail.com>"]
description = "Library for handling Nintendo Nitro Archives."
documentation = "https://docs.rs/narc"
repository = "https://github.com/Roughsketch/nds"
keywords = ["utility", "nds", "narc", "extract", "build"]
categories = ["filesystem"]
license = "MIT"
exclude = ["tests/*", "benches/*"]

[dependencies]
byteorder = "1.2"
failure = {git = "https://github.com/Roughsketch/failure", branch = "fix-ensure"}
memmap = "0.6"
rayon = "1.0"

[dependencies.nitro_fs]
version = "0.1"
path = "../nitro_fs"

[dependencies.num]
version = "0.2"
default-features = false