cargo-features = ["edition"]

[package]
edition = "2018"
name = "nitro_fs"
version = "0.1.0"
authors = ["Maid Dog <maiddogsrl@gmail.com>"]
description = "Library for handling Nintendo's Nitro Filesystem"
documentation = "https://docs.rs/nitro_fs"
repository = "https://github.com/Roughsketch/nds"
keywords = ["nds", "nitro", "filesystem"]
categories = ["filesystem"]
license = "MIT"
exclude = ["tests/*", "benches/*"]

[dependencies]
byteorder = "1.2"
failure = {git = "https://github.com/Roughsketch/failure", branch = "fix-ensure"}
rayon = "1.0"