[package]
edition = "2018"
name = "nitro_fs"
version = "0.1.1"
authors = ["Maid Dog <maiddogsrl@gmail.com>"]
description = "Library for handling Nintendo's Nitro Filesystem"
documentation = "https://docs.rs/nitro_fs"
repository = "https://github.com/Roughsketch/nds"
keywords = ["nds", "nitro", "filesystem"]
categories = ["filesystem"]
license = "MIT"
exclude = ["tests/*", "benches/*"]

[dependencies]
byteorder = "1.3"
failure = "0.1"
rayon = "1.0"